trm, dhcp and template fixes

--- a/dag/group_vars/dhcp_db.yml
+++ b/dag/group_vars/dhcp_db.yml
@@ -7,7 +7,7 @@
 #     option_82_link_selection_standard: standard       # ip dhcp compatibility suboption link-selection standard (sub-option 150 -> 5)
 #     option_82_server_id_override: standard            # ip dhcp compatibility suboption server-override standard (sub-option 152 -> 11)
 #
-#    vrfs:
+#    dag:
 #      all:
 #        helper_address: 
 #          - 10.1.1.11
@@ -23,7 +23,7 @@
 #    Example 1:
 #    ----------
 #      
-#        vrfs:  
+#        dag:  
 #          all:                                             <--------- Applies config to all DAGs
 #            helper_address:                                <--------- configs 'ip helper-address global 10.1.1.1' for all SVIs
 #              - 10.1.1.1                       
@@ -34,7 +34,7 @@
 #    Example 2:  
 #    ----------  
 #              
-#        vrfs:  
+#        dag:  
 #          all:                                             <--------- Applies configs to all except 'green' DAG 
 #            helper_address:                                <--------- configs 'ip helper-address global 10.1.1.1' for all SVIs except green's
 #              - 10.1.1.1   
@@ -54,7 +54,7 @@
 #    Example 3: 
 #    ----------
 #            
-#        vrfs:
+#        dag:
 #          all:
 #            helper_address: 
 #              - 10.1.1.1
@@ -69,7 +69,7 @@
 #    Example 4: 
 #    ----------
 #    
-#        vrfs:
+#        dag:
 #          all:                                              <--------- Applies configs to all DAGs
 #            helper_address:                                 <--------- configs 'ip helper-address 10.1.1.1' and 'ip helper-address 10.1.1.2' for all SVIs
 #              - 10.1.1.1
@@ -81,7 +81,7 @@
 #    Example 5: 
 #    ----------
 #            
-#        vrfs:
+#        dag:
 #          green:                                            <--------- Applies configs to 'green' DAG 
 #            helper_address:                                 <--------- configs 'ip helper-address 10.1.1.1' and 'ip helper-address 10.1.1.2' for all 'green' SVIs
 #              - 10.1.1.1
@@ -108,7 +108,7 @@ dhcp_options:
     option_82_link_selection_standard: standard
     option_82_server_id_override: standard
     
-vrfs:
+dag:
     all:                   
         helper_address: 
             - 10.1.1.1
