--- a/dag/inventory.yml
+++ b/dag/inventory.yml
@@ -3,14 +3,15 @@ all:
     leaf:
       hosts:
         Leaf-01:
-          ansible_host: 10.1.1.1
+          ansible_host: 172.19.74.248
         Leaf-02:
-          ansible_host: 10.1.1.2
-          
+          ansible_host: 172.19.74.132
+        #Leaf-03:
+        #  ansible_host: 172.19.74.187 
+
     spine:
       hosts:
         Spine-01:
-          ansible_host: 10.1.1.3
+          ansible_host: 172.19.74.184
         Spine-02:
-          ansible_host: 10.1.1.4
-
+          ansible_host: 172.19.74.182
